--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "5.3.0",
     "http-status-codes": "2.3.0",
     "leaflet": "1.7.1",
+    "playwright": "^1.44.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -24,11 +25,13 @@
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
+    "@playwright/test": "^1.44.1",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
     "@types/faker": "5.5.9",
     "@types/leaflet": "1.9.3",
+    "@types/node": "^20.12.12",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/react-redux": "7.1.27",
